# teamder-sys

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Rocket.toml  fix_enums.py  nixpacks.toml  start.cmd
.claude/: .fuse_hidden00002d420000011e
crates/teamder-api/: Cargo.toml
crates/teamder-api/src/: auth.rs  chat.rs  error.rs  guards.rs  lib.rs  llm.rs  mailer.rs  main.rs  state.rs
crates/teamder-api/src/routes/: admin.rs  admin_skills.rs  auth.rs  bookmarks.rs  chat.rs  competition_teams.rs  competitions.rs  contact_exchange.rs  health.rs  invites.rs  join_requests.rs  mod.rs  notifications.rs  peer_reviews.rs  project_updates.rs  projects.rs  reports.rs  search.rs  skills.rs  study_group_announcements.rs  study_group_events.rs  study_groups.rs  uploads.rs  users.rs
crates/teamder-api/tests/: api_tests.rs
crates/teamder-core/: Cargo.toml
crates/teamder-core/src/: error.rs  lib.rs  serde_helpers.rs  skills.rs
crates/teamder-core/src/models/: auth_code.rs  bookmark.rs  competition.rs  competition_team.rs  contact_exchange.rs  invite.rs  join_request.rs  message.rs  mod.rs  notification.rs  peer_review.rs  project.rs  project_update.rs  report.rs  skill_catalog.rs  study_group.rs  study_group_announcement.rs  study_group_event.rs  user.rs
crates/teamder-db/: Cargo.toml
crates/teamder-db/src/: client.rs  lib.rs  seed.rs
crates/teamder-db/src/repos/: auth_code_repo.rs  bookmark_repo.rs  competition_repo.rs  competition_team_repo.rs  contact_exchange_repo.rs  invite_repo.rs  join_request_repo.rs  message_repo.rs  mod.rs  notification_repo.rs  peer_review_repo.rs  project_repo.rs  project_update_repo.rs  report_repo.rs  skill_catalog_repo.rs  study_group_announcement_repo.rs  study_group_event_repo.rs  study_group_repo.rs  user_repo.rs
docs/: README.html  README.md  api-reference.html  api-reference.md  architecture.html  architecture.md  authentication.html  authentication.md  database-design.html  database-design.md  deployment.html  deployment.md  getting-started.html  getting-started.md
