[package]
name = "teamder-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "teamder_api"
path = "src/lib.rs"

[[bin]]
name = "teamder-api"
path = "src/main.rs"

[dev-dependencies]
dotenvy = { workspace = true }

[dependencies]
mongodb = { workspace = true }
teamder-core = { workspace = true }
teamder-db = { workspace = true }

rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
rocket_cors = { workspace = true }
