[package]
name = "teamder-api"
version = "0.1.0"
edition = "2021"

[dependencies]
teamder-core = { path = "../teamder-core" }
teamder-db = { path = "../teamder-db" }
rocket = { version = "0.5", features = ["json"] }
rocket_ws = "0.1"
rocket_cors = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = "9"
bcrypt = "0.17"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
mongodb = "3"
futures = "0.3"
