[package]
name = "teamder-db"
version = "0.1.0"
edition = "2021"

[dependencies]
teamder-core = { path = "../teamder-core" }
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
